# selva-box-tree-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_download_data.ipynb  02_explore_the_data.ipynb  02_faster_r_cnn_baseline.ipynb  03_faster_r_cnn_baseline.ipynb  04_faster_r_cnn_larger_input_size.ipynb  05_faster_r_cnn_with_multi_res.ipynb  06_deepforest_pretrained.ipynb
