[project]
name = "selva-box-tree-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "deepforest>=2.0.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "plotly>=6.5.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "wandb>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
